Disable masking for area or window screenshots.

Area masking doesn't cope well with window or area screenshot, so
disable it unless we are taking a screenshot of the whole screen.

https://bugzilla.gnome.org/show_bug.cgi?id=587101